# ocr-cli

./: Cargo.toml  README.md
.guardrails/: config.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  ocr.rs  pipeline.rs  postproc.rs  progress.rs  title.rs  truncate.rs
tests/: programmatic_config.rs
