[package]
name = "ocr-cli"
version = "0.1.0"
edition = "2024"
publish = ["rsproxy-sparse"]

[dependencies]
lmpdf = { path = "../lmpdf/crates/lmpdf" }
llm-core = { path = "../llm-rs/crates/llm-core" }
llm-openai = { path = "../llm-rs/crates/llm-openai" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
regex = "1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
